--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/test?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3310/test?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=URJC2019!
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
