--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.11</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-core</artifactId>
+			<version>0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.8.0</version>
+		</dependency>
 
 
 	</dependencies>
@@ -61,5 +70,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	
 </project>
